<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_nav"
        android:enabled="true"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/child_nav"
        android:enabled="true"
        android:icon="@drawable/ic_nav_child"
        android:title="@string/nav_child" />
    <item
        android:id="@+id/notification_nav"
        android:enabled="true"
        android:icon="@drawable/ic_nav_notification"
        android:title="@string/nav_notification" />
    <item
        android:id="@+id/profile_nav"
        android:enabled="true"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/profile" />
</menu>