<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/preface_bg"
    tools:context=".ui.main.profile.ProfileFragment">


    <include
        android:id="@+id/incl_progress"
        layout="@layout/progress_layout" />

    <include
        android:id="@+id/incl_toolbar"
        layout="@layout/toolbar_white" />

<androidx.constraintlayout.widget.ConstraintLayout
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/incl_toolbar"
    android:layout_marginStart="16dp"
    android:layout_marginTop="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_login_text"
        android:text="@string/login"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:hint="@string/By_number"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/light_blue_a5d9ff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_text"
        app:layout_constraintStart_toEndOf="@+id/tv_login_text"
        app:layout_constraintTop_toTopOf="@+id/tv_login_text"/>

    <TextView
        android:id="@+id/tv_change_region"
        style="@style/ProfileTextView"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_text"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="20dp"
        android:text="@string/change_region"/>

    <TextView
        android:id="@+id/tv_notify"
        style="@style/ProfileTextView"
        android:layout_marginTop="20dp"
        android:text="@string/notify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_region"/>


    <CheckBox
        android:id="@+id/cb_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/tv_notify"
        app:layout_constraintTop_toTopOf="@+id/tv_notify"
        app:layout_constraintBottom_toBottomOf="@id/tv_notify"
        android:layout_marginEnd="20dp"
        app:layout_constraintHorizontal_bias="1"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:buttonTint="@color/blue_0063aa"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_change_lang"
        style="@style/ProfileTextView"
        android:text="@string/change_lang"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_notify"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_help"
        style="@style/ProfileTextView"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_change_lang"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/help" />

    <TextView
        android:id="@+id/tv_about_app"
        style="@style/ProfileTextView"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_help"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/about_app"/>

    <TextView
        android:id="@+id/tv_exit"
        style="@style/ProfileTextView"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_app"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_out"/>
</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>