<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.doctors_appointment.step1.DoctorsAppointmentStep1Fragment">

    <include
        android:id="@+id/incl_progress"
        layout="@layout/progress_layout" />

    <include android:id="@+id/incl_toolbar"
        layout="@layout/toolbar_with_shadow"/>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:overScrollMode="never"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incl_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_choose_appointment_before"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_title_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/step1"
                    android:textColor="@color/black_333333"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_your_data_and_choose_doctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/title_your_data"
                    android:textColor="@color/pink_DF4693"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_step" />

                <TextView
                    android:id="@+id/tv_choose_visit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/description_your_data"
                    android:textColor="@color/silver_737373"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_your_data_and_choose_doctor" />

                <TextView
                    android:id="@+id/tv_text_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/text_pin"
                    android:textColor="@color/black_333333"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_choose_visit" />

                <com.santalu.maskara.widget.MaskEditText
                    android:id="@+id/edT_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="44dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/shape_white_ffffff_12dp_stroke_white_e0e0e0_1dp"
                    android:hint="@string/search_pin"
                    android:inputType="number"
                    android:gravity="center_vertical"
                    android:textColor="@color/black_333333"
                    android:paddingStart="16dp"
                    android:textColorHint="@color/silver_BDBDBD"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_text_pin"
                    app:mask="##############"
                    app:maskCharacter="#" />

                <TextView
                    android:id="@+id/tv_text_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_phone"
                    android:textColor="@color/black_333333"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edT_pin" />

                <com.santalu.maskara.widget.MaskEditText
                    android:id="@+id/edT_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="44dp"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/shape_white_ffffff_12dp_stroke_white_e0e0e0_1dp"
                    android:hint="@string/search_phone"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:paddingStart="16dp"
                    android:textColorHint="@color/silver_BDBDBD"
                    android:textColor="@color/black_333333"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_text_phone"
                    app:mask="0### ## ## ##"
                    app:maskCharacter="#" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_patient_info"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@color/light_green_f7fff9"
                android:paddingHorizontal="16dp"
                android:paddingTop="24dp"
                android:paddingBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_choose_appointment_before">

                <TextView
                    android:id="@+id/tv_you_are_registered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/you_are_registered"
                    android:textColor="@color/black_4E4E4E"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title_organization"
                    style="@style/DoctorsAppointmentRegisteredDataTitle"
                    android:text="@string/title_organization"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_you_are_registered" />

                <TextView
                    android:id="@+id/tv_organization"
                    style="@style/DoctorsAppointmentRegisteredData"
                    android:text="@string/title_organization"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_organization" />

                <TextView
                    android:id="@+id/tv_text_gsv_address"
                    style="@style/DoctorsAppointmentRegisteredDataTitle"
                    android:text="@string/title_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_organization" />

                <TextView
                    android:id="@+id/tv_gsv_address"
                    style="@style/DoctorsAppointmentRegisteredData"
                    android:text="@string/title_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_text_gsv_address" />

                <TextView
                    android:id="@+id/tv_text_fmc_name"
                    style="@style/DoctorsAppointmentRegisteredDataTitle"
                    android:text="@string/title_fmc_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_gsv_address" />

                <TextView
                    android:id="@+id/tv_fmc_name"
                    style="@style/DoctorsAppointmentRegisteredData"
                    android:text="@string/title_fmc_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_text_fmc_name" />

                <TextView
                    android:id="@+id/tv_text_fmc_address"
                    style="@style/DoctorsAppointmentRegisteredDataTitle"
                    android:text="@string/title_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_fmc_name" />

                <TextView
                    android:id="@+id/tv_fmc_address"
                    style="@style/DoctorsAppointmentRegisteredData"
                    android:text="@string/title_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_text_fmc_address" />

                <TextView
                    android:id="@+id/tv_title_phones_registry"
                    style="@style/DoctorsAppointmentRegisteredDataTitle"
                    android:text="@string/title_phones_registry"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_fmc_address" />

                <TextView
                    android:id="@+id/tv_phones_registry"
                    style="@style/DoctorsAppointmentRegisteredData"
                    android:text="@string/underscore"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_phones_registry" />

                <TextView
                    android:id="@+id/tv_title_fio"
                    style="@style/DoctorsAppointmentRegisteredDataTitle"
                    android:text="@string/title_fio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phones_registry" />

                <TextView
                    android:id="@+id/tv_fio"
                    style="@style/DoctorsAppointmentRegisteredData"
                    android:text="@string/title_fio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_fio" />

                <TextView
                    android:id="@+id/tv_title_status_mhi"
                    style="@style/DoctorsAppointmentRegisteredDataTitle"
                    android:text="@string/title_status_mhi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_fio" />

                <TextView
                    android:id="@+id/tv_status_mhi"
                    style="@style/DoctorsAppointmentRegisteredData"
                    android:text="@string/title_status_mhi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_status_mhi" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/selector_shape_btn_12dp"
                android:gravity="center"
                android:text="@string/btn_continue"
                android:enabled="false"
                android:letterSpacing="0"
                android:textAllCaps="false"
                android:textColor="@color/white_ffffff"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_regular"
                app:backgroundTint="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_patient_info" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="36dp"
                android:fontFamily="@font/roboto_regular"
                android:letterSpacing="0"
                android:background="@drawable/shape_silver_828282_12dp"
                app:backgroundTint="@null"
                android:gravity="center"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/white_ffffff"
                android:textSize="18sp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_next"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
